Fix error in bower configuration

--- a/bower.json
+++ b/bower.json
@@ -17,10 +17,9 @@
     "test",
     "tests"
   ],
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "dependencies": {
-    "datatables": "^1.10.11"
+    "datatables": "^1.10.11",
     "bootstrap": "^3.3.6"
   }
 }
