--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,10 @@
     "test",
     "tests"
   ],
-  "devDependencies": {},
+  "devDependencies": {
+    "d3": "^3.5.16",
+    "lodash": "^4.11.1"
+  },
   "dependencies": {
     "datatables": "^1.10.11",
     "bootstrap": "^3.3.6"
